@@ -10,7 +10,7 @@ dnl be defined as -RC2, for example. For real releases, it should be empty.
 
 m4_define(pcre2_major, [10])
 m4_define(pcre2_minor, [10])
-m4_define(pcre2_prerelease, [-RC1])
+m4_define(pcre2_prerelease, [-RC2])
 m4_define(pcre2_date, [2015-02-20])
 
 # NOTE: The CMakeLists.txt file searches for the above variables in the first
